--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
+    "styled-components": "^6.1.17",
     "superjson": "^2.2.2",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar": "^4.0.2",
